@@ -149,7 +149,7 @@ public class PropertySheetOperator extends TopComponentOperator {
      */
     public PropertySheetOperator(int mode, String objectName) {
         this(Bundle.getString("org.netbeans.core.windows.view.ui.Bundle", "CTL_FMT_GlobalProperties",
-                              new Object[]{new Integer(mode), objectName}));
+                              new Object[]{Integer.valueOf(mode), objectName}));
     }
     
     /** Waits for property sheet with given name. Typically sheet
